--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>Veggi One Page Restorent Template</title>
+	<title>My TeaPot</title>
 	<link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css" />
 	<link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,700,300italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
@@ -69,7 +69,7 @@
 				<div class="main_banner_area text-center">
 					<div class="col-md-5 col-sm-5 col-md-offset-7 col-sm-offset-7">
 						<div class="single_banner_text wow zoomIn" data-wow-duration="1s">
-							<p>Veggies es bonus vobis, proinde vos postulo essum.</p>
+							<p>Best Tea Pots in the city.</p>
 							
 							<div class="separetor"></div>
 						</div>
@@ -130,7 +130,7 @@
 					
 					<div class="col-md-2 col-sm-3 col-xs-6 single_special">
 						<div class="single_special_img">
-							<img src="images/s1.png" alt="" />
+							<img src="images/p1.png" alt="" />
 							<div class="single_special_overlay text-center">
 								<h3>Greens fava</h3>
 								<div class="overlay_separetor"></div>
@@ -251,7 +251,7 @@
 					</div>
 					<div class="col-md-2 col-sm-3 col-xs-6 single_special">
 						<div class="single_special_img">
-							<img src="images/s1.png" alt="" />
+							<img src="images/p1.png" alt="" />
 							<div class="single_special_overlay text-center">
 								<h3>Greens fava</h3>
 								<div class="overlay_separetor"></div>
@@ -426,7 +426,7 @@
 				<div class="copyright_text_area">
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<div class="single_footer text-right wow zoomIn" data-wow-duration="2s">
-							<p>Made with <i class="fa fa-heart"></i> by <a href="http://bootstrapthemes.co">Bootstrap Themes</a>2016. All Rights Reserved</p>
+							<p>Made with <i class="fa fa-heart"></i> by <a href="http://myteapot">My TeaPot</a>2017. All Rights Reserved</p>
 						</div>
 					</div>
 					<div class="col-md-6 col-sm-6 col-xs-12">
