--- a/index.html
+++ b/index.html
@@ -13,13 +13,10 @@
 	<link rel="stylesheet" href="css/owl-carousel/owl.carousel.css" />
 	<link rel="stylesheet" href="css/owl-carousel/owl.theme.css" />
 	<link rel="stylesheet" href="css/owl-carousel/owl.transitions.css">
-	
 	<link rel="stylesheet" href="css/style.css" />
 	<link rel="stylesheet" href="css/responsive.css" />
 </head>
 <body>
-
-
 	<div class='preloader'><div class='loaded'>&nbsp;</div></div>
 	<header id="home" class="header">
 		<div class="main_menu_bg navbar-fixed-top wow slideInDown" data-wow-duration="1s">
@@ -44,10 +41,9 @@
 						  
 						  <ul class="nav navbar-nav navbar-right">
 							<li class="active"><a href="#home">Home</a></li>
-							<li><a href="#features">FEATURES</a></li>
-							<li><a href="#special">PRICINGS</a></li>
-							<li><a href="#abouts">CLIENTS</a></li>
-							<li><a href="#footer">FAQ</a></li>
+							<li><a href="#special">Produkte</a></li>
+							<li><a href="#abouts">Über Uns</a></li>
+							<li><a href="#footer">Kontakt</a></li>
 							
 						  </ul>
 						</div><!-- /.navbar-collapse -->
@@ -95,21 +91,21 @@
 				<div class="features_content text-center">
 					<div class="col-md-4">
 						<div class="sinle_features wow slideInUp" data-wow-duration="1s">
-							<img src="images/icon1.png" alt="" />
+							<img src="images/myteapot-logo-small.png" alt="" />
 							<h5>Turnip greens</h5>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisc Pellentesque vel enim a elit viverra elementuma. Aliquam erat volutpat. </p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="sinle_features wow slideInUp" data-wow-duration="1.5s">
-							<img src="images/icon1.png" alt="" />
+							<img src="images/myteapot-logo-small.png" alt="" />
 							<h5>Turnip greens</h5>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisc Pellentesque vel enim a elit viverra elementuma. Aliquam erat volutpat. </p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="sinle_features wow slideInUp" data-wow-duration="2s">
-							<img src="images/icon1.png" alt="" />
+							<img src="images/myteapot-logo-small.png" alt="" />
 							<h5>Turnip greens</h5>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisc Pellentesque vel enim a elit viverra elementuma. Aliquam erat volutpat. </p>
 						</div>
@@ -442,8 +438,6 @@
 			</div>
 		</div>
 	</footer>
-	
-
 
 	<!-- STRAT SCROLL TO TOP -->
 	
@@ -451,25 +445,12 @@
 		<a href="#"><i class="fa fa-chevron-up"></i></a>
 	</div>
 	
-	
-	
-	
-	
-
 	<script type="text/javascript" src="js/jquery/jquery.js"></script>
-	
 	<script type="text/javascript" src="js/script.js"></script>
-	
 	<script type="text/javascript" src="js/bootstrap/bootstrap.min.js"></script>
-	
 	<script type="text/javascript" src="js/fancybox/jquery.fancybox.pack.js"></script>
-	
 	<script type="text/javascript" src="js/nivo-lightbox/nivo-lightbox.min.js"></script>
-	
 	<script type="text/javascript" src="js/owl-carousel/owl.carousel.min.js"></script>
-	
-	
-	
 	<script type="text/javascript" src="js/jquery-easing/jquery.easing.1.3.js"></script>
 	<script type="text/javascript" src="js/wow/wow.min.js"></script>
 </body>
