--- a/index.html
+++ b/index.html
@@ -280,10 +280,10 @@
 					</div>
 					<div class="menus_top_menu text-center wow slideInDown" data-wow-duration="1.5s">
 						<ul>
-							<li class="active"><a href="">Starters</a></li>
-							<li><a href="">Main Dishes</a></li>
-							<li><a href="">Desserts</a></li>
-							<li><a href="">Drinks</a></li>
+							<li class="active"><a href="">Tee</a></li>
+							<li><a href="">Tassen</a></li>
+							<li><a href="">Kannen</a></li>
+							<li><a href="">Zubehör</a></li>
 						</ul>
 					</div>
 					<div class="col-md-6 col-sm-6 col-xs-12">
@@ -348,24 +348,24 @@
 							</div>
 							
 							<div class="contact_form_area">
-								<h3>Contact form</h3>
+								<h3>Kundenservice - Kontakt</h3>
 								<form action="#" id="formid">
 									<div class="row">
 										<div class="col-sm-6 col-xs-6">
 											<div class="form-group">
-												<input type="text" class="form-control" name="name" placeholder="first name">
+												<input type="text" class="form-control" name="name" placeholder="Name">
 											</div>
 										</div>
 										<div class="col-sm-6 col-xs-6">
 											<div class="form-group">
-												<input type="email" class="form-control" name="email" placeholder="Email">
+												<input type="email" class="form-control" name="email" placeholder="E-Mail">
 											</div>
 										</div>
 									</div>
 									<div class="row">
 										<div class="col-sm-12">
 											<div class="form-group">
-												<textarea class="form-control" name="message" rows="3" placeholder="Message"></textarea>
+												<textarea class="form-control" name="message" rows="3" placeholder="Nachricht"></textarea>
 											</div>
 										</div>
 										<div class="form_btn_area text-center">
@@ -389,7 +389,7 @@
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<div class="single_footer text-right">
 							<div class="footer_socail wow zoomIn" data-wow-duration="1.5s">
-								<a href=""><i class="fa fa-google-plus"></i></a>
+								<a href=""><i class="fa fa-google-plus-official"></i></a>
 								<a href=""><i class="fa fa-facebook"></i></a>
 								<a href=""><i class="fa fa-twitter"></i></a>
 								<a href=""><i class="fa fa-instagram"></i></a>
