--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 				<div class="main_special text-center wow slideInUp" data-wow-duration="3s">
 					<div class="col-md-2 col-sm-3 col-xs-6 single_special">
 						<div class="single_special_img">
-							<img src="images/p1.png" alt="" />
+							<img src="images/p1.jpg" alt="" />
 							<div class="single_special_overlay text-center">
 								<h3>Greens fava</h3>
 								<div class="overlay_separetor"></div>
@@ -230,7 +230,7 @@
 					</div>
 					<div class="col-md-2 col-sm-3 col-xs-6 single_special">
 						<div class="single_special_img">
-							<img src="images/p1.png" alt="" />
+							<img src="images/p1.jpg" alt="" />
 							<div class="single_special_overlay text-center">
 								<h3>Greens fava</h3>
 								<div class="overlay_separetor"></div>
@@ -389,7 +389,7 @@
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<div class="single_footer text-right">
 							<div class="footer_socail wow zoomIn" data-wow-duration="1.5s">
-								<a href=""><i class="fa fa-google-plus-official"></i></a>
+								<a href=""><i class="fa fa-google-plus"></i></a>
 								<a href=""><i class="fa fa-facebook"></i></a>
 								<a href=""><i class="fa fa-twitter"></i></a>
 								<a href=""><i class="fa fa-instagram"></i></a>
