--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
 	<link rel="stylesheet" href="css/owl-carousel/owl.transitions.css">
 	<link rel="stylesheet" href="css/style.css" />
 	<link rel="stylesheet" href="css/responsive.css" />
+	
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-107612525-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-107612525-1');
+</script>
+
 </head>
 <body>
 	<div class='preloader'><div class='loaded'>&nbsp;</div></div>
