--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html class="no-js"> <!--<![endif]-->
     <head>
 
-        <title>Agency - Home</title>
+        <title>Clever Kids - Home</title>
 
         <!-- meta -->
         <meta charset="utf-8">
@@ -58,7 +58,7 @@
 
                         <!-- navbar logo -->
                         <div class="navbar-brand">
-                            <span class="sr-only">Avada Pro Agency</span>
+                            <span class="sr-only">Clever Kids</span>
                             <a href="index.html">
                                 <img src="assets/img/main_logo.png" class="img-responsive center-block" alt="logo">
                             </a>
@@ -137,10 +137,10 @@
                     <div class="container">
 
                         <div class="welcome-speech">
-                            <h1>Welcome to our avada agency</h1>
-                            <p>Everything you need to have in order to build a stunning website</p>
+                            <h1>Lernen mit Spaß</h1>
+                            <p>Unsrer Lernspiele motivieren Kinder mit originellen Ideen und faszinierenden Themenwelten und wecken so ihre Freude am Wissen.</p>
                             <a href="#" class="btn btn-white">
-                                Our Works
+                                Online Shop
                             </a>
                         </div><!-- /.intro -->
 
@@ -864,13 +864,9 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <ul class="footer-share-button">
-                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                        <li><a href="https://www.facebook.com/clever.kids.eu/"><i class="fa fa-facebook"></i></a></li>
+                                        <li><a href="https://www.instagram.com/clever.kids.eu/"><i class="fa fa-instagram"></i></a></li>
+                                        <li><a href="https://twitter.com/clever_kids_eu"><i class="fa fa-twitter"></i></a></li>
                                     </ul> <!-- /.footer-share-button -->
                                 </div>
                             </div>
