--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 
 <head>
 
-  <title>Agency - About Us</title>
+  <title>Über Uns | clever Kids</title>
 
   <!-- meta -->
   <meta charset="utf-8">
@@ -131,7 +131,7 @@
           <div class="headline text-center">
             <div class="row">
               <div class="col-md-6 col-md-offset-3">
-                <h2 class="section-title">our story</h2>
+                <h2 class="section-title">Über Uns</h2>
               </div>
             </div>
           </div>
