--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 
 <head>
 
-  <title>Über Uns | clever Kids</title>
+  <title>Über Uns | Clever Kids</title>
 
   <!-- meta -->
   <meta charset="utf-8">
@@ -109,7 +109,7 @@
 
               <ol class="breadcrumb">
                 <li><a href="index.html">home</a></li>
-                <li class="active">about us</li>
+                <li class="active">Über Uns</li>
               </ol>
               <!-- end of /.breadcrumb -->
 
@@ -140,6 +140,8 @@
           <div class="row">
             <div class="col-md-10 col-md-offset-1 text-center">
               <p class="story-description">
+                Liebe Besucherin, lieber Besucher,
+                
                 Das Angebot des Clever Kids ist die ideale Adresse, wenn Sie auf der Suche nach Unterrichtsmaterialien, Lernmaterial, Ergänzungsmaterialien und Lehrmitteln für die Grundschule und Vorschule sind, sowie nach Materialien für die Therapie und Förderung, besonders hinsichtlich Logopädie/Sprachtherapie. Aber auch im Bereich Frühe Bildung/Kindergarten (Förderung von 0-3 wie z.B. in der Kita, der Krippe oder im Hort, Förderung im Kindergarten oder der Vorschule etc.) kann Ihnen Clever Kids eine Vielzahl praxisbezogener Materialien und zahlreiche Fachbücher anbieten. 
 Clever Kids bietet Ihnen eine Vielzahl an Bildungsmedien (Lernmedien) für die Fächer Deutsch, Englisch, Französisch, Mathematik, Wahrnehmung, Sachunterricht, Musik, Sport, Kunst und Medien aber auch nützliche Bastelmaterialien sind in unserem Programm enthalten.
 Entdecken Sie umfassende Informationen zu den Lernhilfen, wie z.B. Hören und verstehen, Lesen und verstehen, Sprechen und Handeln, Sprachentwicklung und Sprachförderung, Deutsch als Zweitsprache bzw. Deutsch als Fremdsprache, Grundlagen der Kommunikation, Englisch im Kindergarten, Erlebnis Mathematik, Rechenschwäche! Bei uns finden Sie auch als Eltern eine Vielzahl an Produkten zur Förderung Ihres Kindes.
