--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 
 <head>
 
-  <title>Agency - Contact</title>
+  <title>Kontakt | Clever Kids</title>
 
   <!-- meta -->
   <meta charset="utf-8">
@@ -95,7 +95,7 @@
             <!-- end of /.dropdown -->
 
             <li>
-              <a href="about.html"><span>Über uns</span></a>
+              <a href="about.html"><span>Über Uns</span></a>
             </li>
             <!-- end of /.dropdown -->
 
@@ -123,7 +123,7 @@
 
               <ol class="breadcrumb">
                 <li><a href="index.html">Home</a></li>
-                <li class="active">Contact</li>
+                <li class="active">Kontakt</li>
               </ol>
               <!-- end of /.breadcrumb -->
 
@@ -172,7 +172,7 @@
                   <div class="col-md-9 col-xs-9 address-info-desc">
                     <h3>Office Address</h3>
                     <p>
-                      Koffman Parklan, P.O Box 555 <br/> StreetView, USA
+                      elsenheimerstr. 58<br/>80687 München
                     </p>
                   </div>
                   <!-- /.address-info-desc -->
@@ -196,8 +196,7 @@
                   <div class="col-md-9 col-xs-9 address-info-desc">
                     <h3>Phone Number</h3>
                     <p>
-                      Local: 1-500-153-hello
-                      <br/> Mobile: 1-600-153-hello
+                      Tel: +49(1577)535153x
                     </p>
                   </div>
                   <!-- /.address-info-desc -->
@@ -221,8 +220,8 @@
                   <div class="col-md-9 col-xs-9 address-info-desc">
                     <h3>Email Address</h3>
                     <p>
-                      info@example.com
-                      <br/> www.example.com
+                      info@clever-kids.eu
+                      <br/> clever-kids.eu
                     </p>
                   </div>
                   <!-- /.address-info-desc -->
@@ -245,10 +244,9 @@
           <div class="headline text-center">
             <div class="row">
               <div class="col-md-6 col-md-offset-3">
-                <h2 class="section-title">Say Hello! Don't be shy</h2>
+                <h2 class="section-title">Kundenservice - Kontakt</h2>
                 <p class="section-sub-title">
-                  If you have any questions or comments, or would just like to say hello,
-                  <br/>please feel free to contact our friendly team
+                  Senden Sie eine Nachricht
                 </p>
                 <!-- /section-sub-title -->
               </div>
