--- a/contact.html
+++ b/contact.html
@@ -172,7 +172,7 @@
                   <div class="col-md-9 col-xs-9 address-info-desc">
                     <h3>Office Address</h3>
                     <p>
-                      elsenheimerstr. 58<br/>80687 München
+                      Elsenheimerstr. 58<br/>80687 München
                     </p>
                   </div>
                   <!-- /.address-info-desc -->
@@ -260,21 +260,21 @@
               <div class="col-md-4">
 
                 <div class="form-group">
-                  <input name="name" type="text" class="form-control" id="name" required="required" placeholder="Full Name">
+                  <input name="name" type="text" class="form-control" id="name" required="required" placeholder="Name">
                 </div>
 
                 <div class="form-group">
-                  <input name="email" type="email" class="form-control" id="email" required="required" placeholder="Email Address">
+                  <input name="email" type="email" class="form-control" id="email" required="required" placeholder="Email">
                 </div>
 
                 <div class="form-group">
-                  <input name="website" type="url" class="form-control" id="subject" required="required" placeholder="Your Website">
+                  <input name="website" type="url" class="form-control" id="subject" required="required" placeholder="Website">
                 </div>
 
               </div>
 
               <div class="col-md-8">
-                <textarea name="message" type="text" class="form-control" id="message" rows="8" required="required" placeholder="Type here message"></textarea>
+                <textarea name="message" type="text" class="form-control" id="message" rows="8" required="required" placeholder="Nachricht"></textarea>
               </div>
             </div>
 
