--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
 
 <head>
 
-  <title>Agency - Portfolio</title>
+  <title>Katalog | Clever Kids</title>
 
   <!-- meta -->
   <meta charset="utf-8">
@@ -110,7 +110,7 @@
 
               <ol class="breadcrumb">
                 <li><a href="index.html">Home</a></li>
-                <li class="active">Portfolio</li>
+                <li class="active">Katalog</li>
               </ol>
               <!-- end of /.breadcrumb -->
 
@@ -134,9 +134,9 @@
           <div class="headline text-center">
             <div class="row">
               <div class="col-md-6 col-md-offset-3">
-                <h2 class="section-title">show off our portfolio</h2>
+                <h2 class="section-title">Unsere Verkaufshits</h2>
                 <p class="section-sub-title">
-                  absolutely stunning design &amp; functionality
+                  lernen + spielen + fördern
                 </p>
                 <!-- /.section-sub-title -->
               </div>
@@ -347,7 +347,7 @@
           <div id="morePortfolio"></div>
           <div class="text-center">
             <a id="loadPortfolio" class="hidden-xs btn btn-white">
-                                Load More <span class="caret"></span>
+                                Mehr <span class="caret"></span>
                             </a>
           </div>
 
