--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <head>
 
-  <title>Clever Kids - Home</title>
+  <title>Home | Clever Kids</title>
 
   <!-- meta -->
   <meta charset="utf-8">
@@ -83,12 +83,14 @@
             <li>
               <a href="catalog.html"><span>Katalog</span></a>
             </li>
-            <!-- end of /.dropdown -->
 
             <li>
               <a href="about.html"><span>Über uns</span></a>
             </li>
-            <!-- end of /.dropdown -->
+
+            <li>
+              <a href="partner.html"><span>Kooperation</span></a>
+            </li>
 
             <li>
               <a href="contact.html"><span>Kontakt</span></a>
@@ -113,7 +115,7 @@
             <h1>Lernen mit Spaß</h1>
             <p>Unsere Lernspiele motivieren Kinder mit originellen Ideen und faszinierenden Themenwelten<br/>und wecken so ihre Freude am Wissen.</p>
             <a href="#" class="btn btn-white">
-                                Online Shop
+                                Unser Angebot
                             </a>
           </div>
           <!-- /.intro -->
@@ -139,7 +141,7 @@
               <div class="col-md-6 col-md-offset-3">
                 <h2 class="section-title">Katalog</h2>
                 <p class="section-sub-title">
-                  absolutely stunning design &amp; functionality
+                  lernen + spielen + fördern
                 </p>
                 <!-- /.section-sub-title -->
               </div>
@@ -333,7 +335,7 @@
               <div class="col-md-6 col-md-offset-3">
                 <h2 class="section-title">Unsere Bestseller</h2>
                 <p class="section-sub-title">
-                  absolutely stunning design &amp; functionality
+                  lernen + spielen + fördern
                 </p>
                 <!-- /.section-sub-title -->
               </div>
