--- a/single_blog.html
+++ b/single_blog.html
@@ -84,7 +84,10 @@
             <li>
               <a href="about.html"><span>Über uns</span></a>
             </li>
-            <!-- end of /.dropdown -->
+
+            <li>
+              <a href="partner.html"><span>Kooperation</span></a>
+            </li>
 
             <li>
               <a href="contact.html"><span>Kontakt</span></a>
