--- a/contact.html
+++ b/contact.html
@@ -173,7 +173,7 @@
                   </div>
 
                   <div class="col-md-9 col-xs-9 address-info-desc">
-                    <h3>Office Address</h3>
+                    <h3>Anschrift</h3>
                     <p>
                       Elsenheimerstr. 58<br/>80687 München
                     </p>
@@ -197,7 +197,7 @@
                   </div>
 
                   <div class="col-md-9 col-xs-9 address-info-desc">
-                    <h3>Phone Number</h3>
+                    <h3>Telefon</h3>
                     <p>
                       Tel: +49(1577)535153x
                     </p>
@@ -221,7 +221,7 @@
                   </div>
 
                   <div class="col-md-9 col-xs-9 address-info-desc">
-                    <h3>Email Address</h3>
+                    <h3>Email</h3>
                     <p>
                       info@clever-kids.eu
                       <br/> clever-kids.eu
