--- a/catalog.html
+++ b/catalog.html
@@ -139,7 +139,7 @@
               <div class="col-md-6 col-md-offset-3">
                 <h2 class="section-title">Unsere Verkaufshits</h2>
                 <p class="section-sub-title">
-                  lernen + spielen + fördern
+                  Wertvolle Lernspiele, welche die ganzheitliche Entwicklung der Kinder unterstützen.
                 </p>
                 <!-- /.section-sub-title -->
               </div>
