--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                       <div class="twit-icon">
                         <i class="fa fa-twitter"></i>
                       </div>
-                      <h3 class="text-capitalize">free stock photos: 74 best sites to find Awesome free images</h3>
+                      <h3 class="text-capitalize">Wertvolle Lernspiele, welche die ganzheitliche Entwicklung der Kinder unterstützen.</h3>
                       <p>
                         @themewagon <br/> 2 days ago on Twitter.com
                       </p>
@@ -299,7 +299,7 @@
                       <div class="twit-icon">
                         <i class="fa fa-twitter"></i>
                       </div>
-                      <h3 class="text-capitalize">free stock photos: 74 best sites to find Awesome free images</h3>
+                      <h3 class="text-capitalize">Kinder sind von Natur aus neugierig und erforschen ihre Umwelt.</h3>
                       <p>
                         @themewagon <br/> 2 days ago on Twitter.com
                       </p>
@@ -311,7 +311,7 @@
                       <div class="twit-icon">
                         <i class="fa fa-twitter"></i>
                       </div>
-                      <h3 class="text-capitalize">free stock photos: 74 best sites to find Awesome free images</h3>
+                      <h3 class="text-capitalize">Im Clever Kids Onlineshop finden Sie eine große Auswahl an Lernspielen für große und kleine Kinder.</h3>
                       <p>
                         @themewagon <br/> 2 days ago on Twitter.com
                       </p>
