--- a/partner.html
+++ b/partner.html
@@ -142,8 +142,15 @@
           <div class="row">
             <div class="col-md-10 col-md-offset-1 text-center">
               <p class="story-description">
-                Kooperation...
+                <h4>Hersteller</h4>
+              ...
 
+              <h4>Blogs und Websites</h4>
+
+Grundsätzlich sind wir immer gerne offen für Vorschläge zur Zusammenarbeit mit anderen Seiten, die zu Clever Kids passen.
+              Schreiben Sie uns einfach eine Nachricht auf info@clever-kids.eu und wir können gemeinsam besprechen, was möglich ist.
+              Wichtig ist uns dabei, dass beide Seiten die Kooperation mit einem guten Gefühl eingehen.
+              
                 Ihr Clever Kids
               </p>
               <!-- /.story-description -->
