--- a/partner.html
+++ b/partner.html
@@ -133,7 +133,7 @@
           <div class="headline text-center">
             <div class="row">
               <div class="col-md-6 col-md-offset-3">
-                <h2 class="section-title">Über Uns</h2>
+                <h2 class="section-title">Das Clever Kids Partnerprogramm</h2>
               </div>
             </div>
           </div>
@@ -143,7 +143,39 @@
             <div class="col-md-10 col-md-offset-1 text-center">
               <p class="story-description">
                 <h4>Hersteller</h4>
-              ...
+
+Mit millionen Kunden ist die Clever Kids der Nr. 1 Online-Händler für Education-Shopping in Europa.
+              Um diese Position auszubauen und unserer Zielgruppe ein maximal relevantes Angebot sowie eine größtmögliche Produktvielfalt und -verfügbarkeit zu bieten, haben wir unser Partnerprogramm gestartet.
+
+Das Programm wurde für ausgewählte Partner entwickelt, die ein Teil des Clever Kids Shoppingerlebnisses werden wollen und Produkte anbieten, die das Sortiment unseres Online-Shops clever-kids.eu optimal ergänzen.
+
+Unser Ziel ist es, unser Shopping-Angebot zum umfassenden One-Stop-Shop für die Familie weiterzuentwickeln. 
+Wir bieten:
+
+    - Die Präsenz auf Europas führender Plattform für Education-Shopping
+    - Einen kontinuierlich wachsenden Kundenstamm
+    - Eine starke Präsenz in der DACH-Region 
+    - Die Möglichkeit, neue Zielgruppen zu erreichen
+    - Langfristige, strategische Partnerschaften mit Herstellern und Händlern
+    - Langjährige Erfahrungen im Plattform-Geschäft
+    - Maßgeschneiderte Anbindungsmodelle
+    - Ein engagiertes Key Account Management Team, das Sie dabei unterstützt, die Performance stetig zu verbessern
+    - Ein freundliches und hilfsbereites Service Team
+
+Auswahlkriterien
+
+Wir möchten unseren Kunden ein einzigartiges Shoppingerlebnis bieten und suchen daher Partner, die folgende Serviceversprechen einhalten können:
+
+    - Kostenloser Versand und Retoure
+    - Schnelle Lieferzeiten und niedrige Storno-Quoten
+    - Ansprechende Artikelbilder und Content entsprechend unserer Vorgaben
+    - Neutrale Kartonage oder Hersteller-Kartonage
+
+Sind Sie interessiert?
+
+Hat Ihre Marke einen Online-Shop, der Ihre Zielgruppe begeistert?
+              Möchten Sie ein Teil des Clever Kids Shoppingerlebnisses werden?
+              Dann stellen Sie uns Ihre Brand vor und schicken Sie uns eine E-Mail an info@clever-kids.eu
 
               <h4>Blogs und Websites</h4>
 
