--- a/partner.html
+++ b/partner.html
@@ -144,38 +144,41 @@
               <p class="story-description">
                 <h4>Hersteller</h4>
 
-Mit millionen Kunden ist die Clever Kids der Nr. 1 Online-Händler für Education-Shopping in Europa.
-              Um diese Position auszubauen und unserer Zielgruppe ein maximal relevantes Angebot sowie eine größtmögliche Produktvielfalt und -verfügbarkeit zu bieten, haben wir unser Partnerprogramm gestartet.
+<p>Mit millionen Kunden ist die Clever Kids der Nr. 1 Online-Händler für Education-Shopping in Europa.</p>
+<p>Um diese Position auszubauen und unserer Zielgruppe ein maximal relevantes Angebot sowie eine größtmögliche Produktvielfalt und -verfügbarkeit zu bieten, haben wir unser Partnerprogramm gestartet.</p>
 
-Das Programm wurde für ausgewählte Partner entwickelt, die ein Teil des Clever Kids Shoppingerlebnisses werden wollen und Produkte anbieten, die das Sortiment unseres Online-Shops clever-kids.eu optimal ergänzen.
+<p>Das Programm wurde für ausgewählte Partner entwickelt, die ein Teil des Clever Kids Shoppingerlebnisses werden wollen und Produkte anbieten, die das Sortiment unseres Online-Shops clever-kids.eu optimal ergänzen.</p>
 
-Unser Ziel ist es, unser Shopping-Angebot zum umfassenden One-Stop-Shop für die Familie weiterzuentwickeln. 
-Wir bieten:
+<p>Unser Ziel ist es, unser Shopping-Angebot zum umfassenden One-Stop-Shop für die Familie weiterzuentwickeln.</p>
 
-    - Die Präsenz auf Europas führender Plattform für Education-Shopping
-    - Einen kontinuierlich wachsenden Kundenstamm
-    - Eine starke Präsenz in der DACH-Region 
-    - Die Möglichkeit, neue Zielgruppen zu erreichen
-    - Langfristige, strategische Partnerschaften mit Herstellern und Händlern
-    - Langjährige Erfahrungen im Plattform-Geschäft
-    - Maßgeschneiderte Anbindungsmodelle
-    - Ein engagiertes Key Account Management Team, das Sie dabei unterstützt, die Performance stetig zu verbessern
-    - Ein freundliches und hilfsbereites Service Team
-
-Auswahlkriterien
+              <h5>Wir bieten:</h5>
+<ul>
+    <li>Die Präsenz auf Europas führender Plattform für Education-Shopping</li>
+    <li>Einen kontinuierlich wachsenden Kundenstamm</li>
+    <li>Eine starke Präsenz in der DACH-Region </li>
+    <li>Die Möglichkeit, neue Zielgruppen zu erreichen</li>
+    <li>Langfristige, strategische Partnerschaften mit Herstellern und Händlern</li>
+    <li>Langjährige Erfahrungen im Plattform-Geschäft</li>
+    <li>Maßgeschneiderte Anbindungsmodelle</li>
+    <li>Ein engagiertes Key Account Management Team, das Sie dabei unterstützt, die Performance stetig zu verbessern</li>
+    <li>Ein freundliches und hilfsbereites Service Team</li>
+</ul>
+  
+<h5>Auswahlkriterien</h5>
 
 Wir möchten unseren Kunden ein einzigartiges Shoppingerlebnis bieten und suchen daher Partner, die folgende Serviceversprechen einhalten können:
-
-    - Kostenloser Versand und Retoure
-    - Schnelle Lieferzeiten und niedrige Storno-Quoten
-    - Ansprechende Artikelbilder und Content entsprechend unserer Vorgaben
-    - Neutrale Kartonage oder Hersteller-Kartonage
-
-Sind Sie interessiert?
+<ul>
+    <li>Kostenloser Versand und Retoure</li>
+    <li>Schnelle Lieferzeiten und niedrige Storno-Quoten</li>
+    <li>Ansprechende Artikelbilder und Content entsprechend unserer Vorgaben</li>
+    <li>Neutrale Kartonage oder Hersteller-Kartonage</li>
+</ul>
+            
+<h5>Sind Sie interessiert?</h5>
 
 Hat Ihre Marke einen Online-Shop, der Ihre Zielgruppe begeistert?
-              Möchten Sie ein Teil des Clever Kids Shoppingerlebnisses werden?
-              Dann stellen Sie uns Ihre Brand vor und schicken Sie uns eine E-Mail an info@clever-kids.eu
+Möchten Sie ein Teil des Clever Kids Shoppingerlebnisses werden?
+Dann stellen Sie uns Ihre Brand vor und schicken Sie uns eine E-Mail an info@clever-kids.eu
 
               <h4>Blogs und Websites</h4>
 
